# web_listening

./: .env.example  .gitignore  AGENTS.md  AGENT_RESCUE_VALIDATION.md  AI_AGENT_FUTURE_PLAN.md  DESEARCH_RESEARCH_REPORT.md  IMPLEMENTATION_STATUS.md  README.md  REAL_SITE_VALIDATION.md  RESEARCH_REPORT.md  SEARCH_INTEGRATION_PLAN.md  SMOKE_SITE_MANAGEMENT.md  SMOKE_SITE_VALIDATION.md  TREE_CATALOG_VALIDATION.md  TREE_MONITORING_DESIGN.md  pyproject.toml
.codex/: README.md
.hermes/: project-status.md
config/: dev_test_sites.json  smoke_site_catalog.json
docs/: README.md
tests/: test_acquisition_capture.py  test_acquisition_execution_plan.py  test_acquisition_execution_plan_contract_fixture.py  test_acquisition_fallback.py  test_acquisition_lineage.py  test_acquisition_profile.py  test_acquisition_tools_contract_fixture.py  test_api.py  test_bootstrap_summary.py  test_browseract_executor.py  test_catalog_site_skill_workflow.py  test_catalog_site_skills.py  test_cli.py  test_crawler.py  test_dev_daily_monitor.py  test_dev_targets.py  test_diff.py  test_document.py  test_document_manifest.py  test_executor_gateway.py  test_job_artifacts.py  test_manifest_contract_fixture.py  test_mcp_server.py  test_monitor_scope_planner.py  test_monitor_task.py  test_polite.py  test_release_version.py  test_rescue.py  test_scheduler.py  test_scope_lookup.py  test_section_classifier.py  test_section_discovery.py  test_site_skill_protocol_contracts.py  test_site_skill_registry.py  test_smoke_catalog.py  test_smoke_sites.py  test_staged_acquisition.py  test_staged_workflow_authority.py  (+8 more)
(+269 files in other folders)
