[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "web-listening"
version = "0.1.0"
description = "Monitor websites for changes, download documents, generate AI summaries"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0",
    "openai>=1.30.0",
    "python-dateutil>=2.9.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx",
]

[project.scripts]
web-listening = "web_listening.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["web_listening*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
